# ReACT

./: .gitignore  EXPERIMENTAL  LICENSE  README.md  install-record.txt  setup.py
cosmosis/: cosmosis_reaction_module.py
notebooks/: pyreact_demo-neutrinos.ipynb  pyreact_demo.ipynb
pyreact/: Makefile  __init__.py  cosmosis_multiply_reaction_module.py  react.py  react_wrapper.cpp
reactions/: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  bootstrap.sh  build.sh  build_copter.sh  config.h  config.h.in  configure  configure.ac  ltmain.sh
reactions/data/: M001.ini  M002.ini  M003.ini  Makefile.am  Makefile.in  bigpm.ini  eds.ini  matsubara.ini  reloaded.ini  taruya_hiramatsu.ini  tk_yoshida.ini  wmap5.ini  yoshida.ini
reactions/doc/: Makefile.am  Makefile.in  README  cosmologies.txt  integration.txt
reactions/examples/: Makefile.in  a.out  bs.cpp  cosmo_react_test.cpp  halo_ps.cpp  neutrino_test.cpp  pk_test.cpp  pyreact_demo.ipynb  reaction.cpp  reaction_mnu.cpp  spt.cpp  spt_rsd.cpp  test  validate.cpp  z.txt
reactions/examples/.ipynb_checkpoints/: plots-checkpoint.ipynb
reactions/examples/dustgrain/: LCDM_power_all_033.txt
reactions/examples/dustgrain/0.06ev/: F6_nu006_params.ini
reactions/examples/dustgrain/0.0ev/: F5_params.ini  F6_params.ini  GR_params.ini
reactions/examples/dustgrain/0.15ev/: F5_nu015_params.ini
reactions/examples/dustgrain/0.1ev/: F5_nu01_params.ini  F6_nu01_params.ini
reactions/examples/tests/: test_params.ini
reactions/examples/transfers/: Matteo_de1.ini  Matteo_de3.ini  Matteo_fr.ini  dgp.ini  fr_new.ini  lcdm.ini  multidark.ini  planck.ini  wmap9b.ini
reactions/examples/transfers/baha/: baha_lcdm_params.ini  baha_wcdm_params.ini
reactions/examples/validate/matteo_data/: Mnu_reactions.tar
reactions/examples/validate/matteo_data/linear/: mnu_0.4_params.ini
reactions/examples/validate/mgcamb/: mnu_0.4_params.ini  mysigma8.rtf  plots.ipynb
reactions/include/Copter/: CorrelationFunction.h  Cosmology.h  Datafile.h  GrowthFunction.h  HALO.h  LinearPS.h  ODE.h  ODE.inl  PowerSpectrum.h  Quadrature.h  Quadrature.inl  RPT.h  SCOL.h  SPT.h  SimpleRG.h  SpecialFunctions.h  Timer.h  array.h  cosmo_react.h  rng.h
reactions/m4/: ax_cc_maxopt.m4
reactions/pyreact/: cosmosis_reaction_module.py  react.py
reactions/python/: Closure.i  Common.i  ConsistentSPT.i  CorrelationFunction.i  Cosmology.i  Datafile.i  GrowthFunction.i  InterpolatedPS.i  LagrangianResummation.i  LargeN.i  LinearPS.i  Makefile.am  Makefile.in  NoWigglePS.i  PowerSpectrum.i  Quadrature.i  RPT.i  SPT.i  SimpleRG.i  Spline.i  Timer.i  array.i  pycopter.i
reactions/share/Copter/: M000.ini  M004.ini  pietroni.ini  rpt.ini  rpt_cmbfast.ini  valageas.ini
reactions/src/: BSPT.cpp  BSPT.h  BSPTN.cpp  BSPTN.h  Closure.cpp  Closure.h  Common.cpp  Common.h  ConsistentSPT.cpp  ConsistentSPT.h  CorrelationFunction.cpp  Cosmology.cpp  Datafile.cpp  FlowingWithTime.cpp  FlowingWithTime.h  GrowthFunction.cpp  HALO.cpp  HALO.h  HigherSPT.cpp  HigherSPT.h  InterpolatedPS.cpp  InterpolatedPS.h  Kaiser.cpp  Kaiser.h  LagrangianResummation.cpp  LagrangianResummation.h  LargeN.cpp  LargeN.h  LinearPS.cpp  LinearPS.h  Makefile.am  Makefile.in  MonteCarlo.cpp  MonteCarlo.h  NoWigglePS.cpp  NoWigglePS.h  PowerSpectrum.cpp  Quadrature.cpp  RPT.cpp  SCOL.cpp  (+17 more)
reactions/src/extra_libraries/: CDE.cpp  CDE.h  CMBc.cpp  CMBc.h  CorrelationFunction.cpp  CorrelationFunction.h  EFT.cpp  EFT.h  HigherStat.cpp  HigherStat.h  Makefile.am  Makefile.in  PMG_Interpolation.cpp  PMG_Interpolation.h  RegPT.cpp  RegPT.h  SPT.cpp  SPT.h  SpecialFunctions.cpp  SpecialFunctions.h
reactions/tests/: Makefile.am  Makefile.in  testlr.cpp  testpab.cpp
reactions/tests/benchmarks/: create_reaction_benchmark.cpp  transfer.ini
reactions/tests/deprecated/: testintegrate.cpp  testmontecarlo.cpp  testode.cpp  testrpt.cpp  testspt.cpp
reactions/tests/deprecated/test_pyreact/: cosmo_like.sh  k.txt  pofk.txt  values_lsst.ini
reactions/tests/test_mnu/: test_fr.cpp  test_wcdm.cpp
reactions/tests/test_pyreact/: Nz_DIR_zall.asc  cl_comparison.py  lsst_simulation_fiducial_3000.fits  pipeline.ini  pipeline_emcee_lsst.ini  pipeline_lsst.ini  test_react.py  values.ini  values_lsst.ini  z.txt
