ACLOCAL_AMFLAGS = -I m4
SUBDIRS = src python data doc tests

EXTRA_DIST = \
    bootstrap.sh \
    examples/Makefile.in \
    examples/example.ini \
    examples/distance.cpp \
    examples/fwt.cpp \
    examples/integration.cpp \
    examples/linear.cpp \
    examples/rpt2.cpp \
    examples/spt2.cpp \
    examples/tk_example.dat
