copterdatadir = $(datadir)/Copter
dist_copterdata_DATA = \
    M000.ini \
    M001.ini \
    M002.ini \
    M003.ini \
    M004.ini \
    bigpm.ini \
    eds.ini \
    matsubara.ini \
    pietroni.ini \
    reloaded.ini \
    rpt.ini \
    rpt_cmbfast.ini \
    taruya_hiramatsu.ini \
    tk_bigpm.dat \
    tk_bigpm_new.dat \
    tk_eds.dat \
    tk_matsubara.dat \
    tk_matsubara_new.dat \
    tk_pietroni.dat \
    tk_reloaded.dat \
    tk_rpt.dat \
    tk_rpt_cmbfast.dat \
    tk_taruya_hiramatsu.dat \
    tk_wmap5.dat \
    tk_yoshida.ini \
    tkfile_000.dat \
    tkfile_001.dat \
    tkfile_002.dat \
    tkfile_003.dat \
    tkfile_004.dat \
    valageas.ini \
    wmap5.ini \
    yoshida.ini
