check_PROGRAMS = testintegrate testlr testmontecarlo testode testrpt testspt testpab

AM_CPPFLAGS = -I$(top_srcdir)/src

testintegrate_CPPFLAGS = -I$(top_srcdir)/src
testintegrate_LDADD = -L../src/.libs -lcopter
testintegrate_SOURCES = testintegrate.cpp

testmontecarlo_CPPFLAGS = -I$(top_srcdir)/src
testmontecarlo_LDADD = -L../src/.libs -lcopter
testmontecarlo_SOURCES = testmontecarlo.cpp

testlr_LDADD = -L../src/.libs -lcopter
testlr_SOURCES = testlr.cpp

testode_CPPFLAGS = -I$(top_srcdir)/src
testode_LDADD = -L../src/.libs -lcopter
testode_SOURCES = testode.cpp

testspt_CPPFLAGS = -I$(top_srcdir)/src
testspt_LDADD = -L../src/.libs -lcopter
testspt_SOURCES = testspt.cpp

testrpt_CPPFLAGS = -I$(top_srcdir)/src
testrpt_LDADD = -L../src/.libs -lcopter
testrpt_SOURCES = testrpt.cpp

testpab_CPPFLAGS = -I$(top_srcdir)/src
testpab_LDADD = -L../src/.libs -lcopter
testpab_SOURCES = testpab.cpp
